--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,11 +13,31 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
+    "ethers": "^6.12.1",
+    "express": "^4.19.2",
+    "node-cron": "^3.0.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.7.5",
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.12"
+  },
+  "overrides": {
+    "wagmi": {
+      "typescript": "^4.9.5"
+    },
+    "viem": {
+      "typescript": "^4.9.5"
+    },
+    "react-scripts": {
+      "typescript": "^4.9.5"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +62,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
+    "typescript": "^4.9.5"
   }
 }
