--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.16",
+    "@privy-io/react-auth": "^1.64.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -38,6 +39,7 @@
     "react-scripts": {
       "typescript": "^4.9.5"
     }
+ 
   },
   "scripts": {
     "start": "react-scripts start",
