--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "axios": "^1.6.8",
-    "chart.js": "^4.4.2",
+    "axios": "^0.27.2",
+    "chart.js": "4.2",
     "cors": "^2.8.5",
     "ethers": "^6.12.1",
     "express": "^4.19.2",
@@ -24,7 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.12"
@@ -39,7 +39,6 @@
     "react-scripts": {
       "typescript": "^4.9.5"
     }
- 
   },
   "scripts": {
     "start": "react-scripts start",
