--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
@@ -84,6 +84,7 @@
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.12",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.8",
     "chai": "^4.4.1",
     "ethers": "^6.12.1",
