database with mongo connected and get/post submissions functions updated. vote/reset next

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "node-cron": "^3.0.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -83,6 +85,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.8",
