--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "chai": "^4.4.1",
     "ethers": "^6.12.1",
     "hardhat": "^2.22.4",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.10",
     "solidity-coverage": "^0.8.12",
     "ts-node": "^10.9.2",
