--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@gnosis.pm/conditional-tokens-contracts": "^1.0.3",
+    "@gnosis.pm/conditional-tokens-market-makers": "^1.8.1",
     "@mui/material": "^5.15.16",
     "@openzeppelin/contracts": "^5.0.2",
     "@privy-io/react-auth": "^1.64.0",
