altered script to fit but hardhat still not compiling yet. I might just use their ABIs directly as working with these old solidty contracts (0.5.1) isnt fun

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@gnosis.pm/conditional-tokens-contracts": "^1.0.3",
     "@gnosis.pm/conditional-tokens-market-makers": "^1.8.1",
     "@mui/material": "^5.15.16",
-    "@openzeppelin/contracts": "^4.9.6",
+    "@openzeppelin/contracts": "^2.5.1",
     "@privy-io/react-auth": "^1.64.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -95,6 +95,7 @@
     "@types/uuid": "^9.0.8",
     "chai": "^4.4.1",
     "ethers": "^6.12.1",
+    "ganache": "^7.9.2",
     "hardhat": "^2.22.4",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.10",
