--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@gnosis.pm/conditional-tokens-contracts": "^1.0.3",
     "@gnosis.pm/conditional-tokens-market-makers": "^1.8.1",
     "@mui/material": "^5.15.16",
-    "@openzeppelin/contracts": "^2.5.1",
     "@privy-io/react-auth": "^1.64.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -25,6 +24,7 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "node-cron": "^3.0.3",
+    "openzeppelin-solidity": "^2.3.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
